core/src/storage/snapshots/content__storage__router__tests__put_object.snap
---
source: src/storage/router.rs
expression: response
---
TestResponse {
    method: PUT,
    full_request_url: Url {
        scheme: "http",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Domain(
                "localhost",
            ),
        ),
        port: None,
        path: "/test-bucket/index.html",
        query: Some(
            "action=Put&expires=1684969600&signature=test",
        ),
        fragment: None,
    },
    headers: {
        "content-type": "text/plain; charset=utf-8",
        "content-length": "8",
    },
    status_code: 200,
    response_body: b"Uploaded",
}
